// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`1. circles.onAdd >  (deep) 1`] = `
[
  <div
    className="absolute left-0 top-0"
  >
    <button
      className="btn"
      disabled={false}
      onClick={[Function]}
    >
      <span
        className="i-mdi-undo text-xl"
      />
    </button>
    <button
      className="btn"
      disabled={true}
      onClick={[Function]}
    >
      <span
        className="i-mdi-redo text-xl"
      />
    </button>
  </div>,
  <div
    className="h-100vh"
    onClick={[Function]}
  >
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 27,
          "top": 51,
        }
      }
    />
  </div>,
]
`;

exports[`1. circles.onAdd > $stan changes 1`] = `
{
  "circles": {
    "list": {
      "0": {
        "x": 27,
        "y": 51,
      },
    },
    "size": 1,
  },
}
`;

exports[`2. circles.onAdd >  (deep) 1`] = `
[
  <div
    className="absolute left-0 top-0"
  >
    <button
      className="btn"
      disabled={false}
      onClick={[Function]}
    >
      <span
        className="i-mdi-undo text-xl"
      />
    </button>
    <button
      className="btn"
      disabled={true}
      onClick={[Function]}
    >
      <span
        className="i-mdi-redo text-xl"
      />
    </button>
  </div>,
  <div
    className="h-100vh"
    onClick={[Function]}
  >
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 27,
          "top": 51,
        }
      }
    />
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 42,
          "top": 57,
        }
      }
    />
  </div>,
]
`;

exports[`2. circles.onAdd > $stan changes 1`] = `
{
  "circles": {
    "list": {
      "1": {
        "x": 42,
        "y": 57,
      },
    },
    "size": 2,
  },
}
`;

exports[`3. circles.onAdd >  (deep) 1`] = `
[
  <div
    className="absolute left-0 top-0"
  >
    <button
      className="btn"
      disabled={false}
      onClick={[Function]}
    >
      <span
        className="i-mdi-undo text-xl"
      />
    </button>
    <button
      className="btn"
      disabled={true}
      onClick={[Function]}
    >
      <span
        className="i-mdi-redo text-xl"
      />
    </button>
  </div>,
  <div
    className="h-100vh"
    onClick={[Function]}
  >
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 27,
          "top": 51,
        }
      }
    />
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 42,
          "top": 57,
        }
      }
    />
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 55,
          "top": 61,
        }
      }
    />
  </div>,
]
`;

exports[`3. circles.onAdd > $stan changes 1`] = `
{
  "circles": {
    "list": {
      "2": {
        "x": 55,
        "y": 61,
      },
    },
    "size": 3,
  },
}
`;

exports[`4. circles.onAdd >  (deep) 1`] = `
[
  <div
    className="absolute left-0 top-0"
  >
    <button
      className="btn"
      disabled={false}
      onClick={[Function]}
    >
      <span
        className="i-mdi-undo text-xl"
      />
    </button>
    <button
      className="btn"
      disabled={true}
      onClick={[Function]}
    >
      <span
        className="i-mdi-redo text-xl"
      />
    </button>
  </div>,
  <div
    className="h-100vh"
    onClick={[Function]}
  >
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 27,
          "top": 51,
        }
      }
    />
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 42,
          "top": 57,
        }
      }
    />
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 55,
          "top": 61,
        }
      }
    />
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 67,
          "top": 66,
        }
      }
    />
  </div>,
]
`;

exports[`4. circles.onAdd > $stan changes 1`] = `
{
  "circles": {
    "list": {
      "3": {
        "x": 67,
        "y": 66,
      },
    },
    "size": 4,
  },
}
`;

exports[`5. circles.onAdd >  (deep) 1`] = `
[
  <div
    className="absolute left-0 top-0"
  >
    <button
      className="btn"
      disabled={false}
      onClick={[Function]}
    >
      <span
        className="i-mdi-undo text-xl"
      />
    </button>
    <button
      className="btn"
      disabled={true}
      onClick={[Function]}
    >
      <span
        className="i-mdi-redo text-xl"
      />
    </button>
  </div>,
  <div
    className="h-100vh"
    onClick={[Function]}
  >
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 27,
          "top": 51,
        }
      }
    />
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 42,
          "top": 57,
        }
      }
    />
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 55,
          "top": 61,
        }
      }
    />
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 67,
          "top": 66,
        }
      }
    />
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 82,
          "top": 71,
        }
      }
    />
  </div>,
]
`;

exports[`5. circles.onAdd > $stan changes 1`] = `
{
  "circles": {
    "list": {
      "4": {
        "x": 82,
        "y": 71,
      },
    },
    "size": 5,
  },
}
`;

exports[`6. circles.onUndo >  (deep) 1`] = `
[
  <div
    className="absolute left-0 top-0"
  >
    <button
      className="btn"
      disabled={false}
      onClick={[Function]}
    >
      <span
        className="i-mdi-undo text-xl"
      />
    </button>
    <button
      className="btn"
      disabled={false}
      onClick={[Function]}
    >
      <span
        className="i-mdi-redo text-xl"
      />
    </button>
  </div>,
  <div
    className="h-100vh"
    onClick={[Function]}
  >
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 27,
          "top": 51,
        }
      }
    />
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 42,
          "top": 57,
        }
      }
    />
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 55,
          "top": 61,
        }
      }
    />
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 67,
          "top": 66,
        }
      }
    />
  </div>,
]
`;

exports[`6. circles.onUndo > $stan changes 1`] = `
{
  "circles": {
    "size": 4,
  },
}
`;

exports[`7. circles.onUndo >  (deep) 1`] = `
[
  <div
    className="absolute left-0 top-0"
  >
    <button
      className="btn"
      disabled={false}
      onClick={[Function]}
    >
      <span
        className="i-mdi-undo text-xl"
      />
    </button>
    <button
      className="btn"
      disabled={false}
      onClick={[Function]}
    >
      <span
        className="i-mdi-redo text-xl"
      />
    </button>
  </div>,
  <div
    className="h-100vh"
    onClick={[Function]}
  >
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 27,
          "top": 51,
        }
      }
    />
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 42,
          "top": 57,
        }
      }
    />
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 55,
          "top": 61,
        }
      }
    />
  </div>,
]
`;

exports[`7. circles.onUndo > $stan changes 1`] = `
{
  "circles": {
    "size": 3,
  },
}
`;

exports[`8. circles.onAdd >  (deep) 1`] = `
[
  <div
    className="absolute left-0 top-0"
  >
    <button
      className="btn"
      disabled={false}
      onClick={[Function]}
    >
      <span
        className="i-mdi-undo text-xl"
      />
    </button>
    <button
      className="btn"
      disabled={true}
      onClick={[Function]}
    >
      <span
        className="i-mdi-redo text-xl"
      />
    </button>
  </div>,
  <div
    className="h-100vh"
    onClick={[Function]}
  >
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 27,
          "top": 51,
        }
      }
    />
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 42,
          "top": 57,
        }
      }
    />
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 55,
          "top": 61,
        }
      }
    />
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 96,
          "top": 75,
        }
      }
    />
  </div>,
]
`;

exports[`8. circles.onAdd > $stan changes 1`] = `
{
  "circles": {
    "list": {
      "3": {
        "x": 96,
        "y": 75,
      },
      "4": undefined,
    },
    "size": 4,
  },
}
`;

exports[`9. circles.onUndo >  (deep) 1`] = `
[
  <div
    className="absolute left-0 top-0"
  >
    <button
      className="btn"
      disabled={false}
      onClick={[Function]}
    >
      <span
        className="i-mdi-undo text-xl"
      />
    </button>
    <button
      className="btn"
      disabled={false}
      onClick={[Function]}
    >
      <span
        className="i-mdi-redo text-xl"
      />
    </button>
  </div>,
  <div
    className="h-100vh"
    onClick={[Function]}
  >
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 27,
          "top": 51,
        }
      }
    />
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 42,
          "top": 57,
        }
      }
    />
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 55,
          "top": 61,
        }
      }
    />
  </div>,
]
`;

exports[`9. circles.onUndo > $stan changes 1`] = `
{
  "circles": {
    "size": 3,
  },
}
`;

exports[`10. circles.onUndo >  (deep) 1`] = `
[
  <div
    className="absolute left-0 top-0"
  >
    <button
      className="btn"
      disabled={false}
      onClick={[Function]}
    >
      <span
        className="i-mdi-undo text-xl"
      />
    </button>
    <button
      className="btn"
      disabled={false}
      onClick={[Function]}
    >
      <span
        className="i-mdi-redo text-xl"
      />
    </button>
  </div>,
  <div
    className="h-100vh"
    onClick={[Function]}
  >
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 27,
          "top": 51,
        }
      }
    />
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 42,
          "top": 57,
        }
      }
    />
  </div>,
]
`;

exports[`10. circles.onUndo > $stan changes 1`] = `
{
  "circles": {
    "size": 2,
  },
}
`;

exports[`11. circles.onRedo >  (deep) 1`] = `
[
  <div
    className="absolute left-0 top-0"
  >
    <button
      className="btn"
      disabled={false}
      onClick={[Function]}
    >
      <span
        className="i-mdi-undo text-xl"
      />
    </button>
    <button
      className="btn"
      disabled={false}
      onClick={[Function]}
    >
      <span
        className="i-mdi-redo text-xl"
      />
    </button>
  </div>,
  <div
    className="h-100vh"
    onClick={[Function]}
  >
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 27,
          "top": 51,
        }
      }
    />
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 42,
          "top": 57,
        }
      }
    />
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 55,
          "top": 61,
        }
      }
    />
  </div>,
]
`;

exports[`11. circles.onRedo > $stan changes 1`] = `
{
  "circles": {
    "size": 3,
  },
}
`;

exports[`12. circles.onRedo >  (deep) 1`] = `
[
  <div
    className="absolute left-0 top-0"
  >
    <button
      className="btn"
      disabled={false}
      onClick={[Function]}
    >
      <span
        className="i-mdi-undo text-xl"
      />
    </button>
    <button
      className="btn"
      disabled={true}
      onClick={[Function]}
    >
      <span
        className="i-mdi-redo text-xl"
      />
    </button>
  </div>,
  <div
    className="h-100vh"
    onClick={[Function]}
  >
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 27,
          "top": 51,
        }
      }
    />
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 42,
          "top": 57,
        }
      }
    />
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 55,
          "top": 61,
        }
      }
    />
    <div
      className="h-4 w-4 rounded-full absolute -m-2 border-white border-solid border-2"
      style={
        {
          "left": 96,
          "top": 75,
        }
      }
    />
  </div>,
]
`;

exports[`12. circles.onRedo > $stan changes 1`] = `
{
  "circles": {
    "size": 4,
  },
}
`;
